--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-scripts": "1.1.4",
     "tachyons": "^4.9.1"
   },
-  "homepage" : "https://github.com/tonydc1997/RoboFriends",
+  "homepage" : "https://tonydc1997.github.io/RoboFriends",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
