--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
     "react-scripts": "1.1.4",
     "tachyons": "^4.9.1"
   },
-  "homepage": "https://tonydc1997.github.io/RoboFriends",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "npm run build"
   },
   "devDependencies": {
     "gh-pages": "^1.1.0"
