--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "robofriends",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tonydc1997.github.io/RoboFriends",
   "dependencies": {
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
