--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
+    "enzyme": "^3.5.0",
+    "enzyme-adapter-react-16": "^1.3.1",
     "gh-pages": "^1.2.0"
   }
 }
