--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "enzyme": "^3.5.0",
     "enzyme-adapter-react-16": "^1.3.1",
-    "gh-pages": "^1.2.0"
+    "gh-pages": "^1.2.0",
+    "redux-mock-store": "^1.5.3"
   }
 }
