--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "enzyme": "^3.5.0",
     "enzyme-adapter-react-16": "^1.3.1",
     "gh-pages": "^1.2.0",
+    "nock": "^10.0.0",
     "redux-mock-store": "^1.5.3"
   }
 }
