--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "homepage": "https://tonydc1997.github.io/RoboFriends",
   "dependencies": {
     "react": "^16.3.1",
-    "react-dom": "^16.3.1",
+    "react-dom": "^16.3.3",
     "react-redux": "^5.0.7",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^2.0.0",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
@@ -27,5 +27,11 @@
     "gh-pages": "^1.2.0",
     "nock": "^10.0.0",
     "redux-mock-store": "^1.5.3"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
