--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,4 +8,12 @@ jobs:
       - run: echo "npm installing..."
       - run: npm install
       - run: CI=true npm run build
+  test:
+    docker:
+      - image: circleci/node:8.9
+    steps:
+      - checkout
+      - run: echo "running tests..."
+      - run: npm install
+      - run: npm test
       
