--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,4 +16,10 @@ jobs:
       - run: echo "running tests..."
       - run: npm install
       - run: npm test
+workflows:
+  version: 2
+  build_&_test:
+    jobs: 
+      - build
+      - test
       
