--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "enzyme-adapter-react-16": "^1.3.1",
     "gh-pages": "^1.2.0",
     "nock": "^10.0.0",
+    "prettier": "1.15.2",
     "redux-mock-store": "^1.5.3"
   },
   "browserslist": [
