--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "https://tonydc1997.github.io/RoboFriends",
   "dependencies": {
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-prettier": "^3.0.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.3",
     "react-redux": "^5.0.7",
@@ -24,6 +26,7 @@
   "devDependencies": {
     "enzyme": "^3.5.0",
     "enzyme-adapter-react-16": "^1.3.1",
+    "eslint": "^5.9.0",
     "gh-pages": "^1.2.0",
     "nock": "^10.0.0",
     "prettier": "1.15.2",
