--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "enzyme": "^3.5.0",
     "enzyme-adapter-react-16": "^1.3.1",
     "eslint": "^5.9.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
     "gh-pages": "^1.2.0",
     "nock": "^10.0.0",
     "prettier": "1.15.2",
