--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,5 +1,30 @@
+env:
+  browser: true
+  es6: true
+  jest: true 
+
 extends: airbnb, plugin:prettier/recommended
 
 rules: 
+  class-methods-use-this: off
+  import/no-name-as-default: off
+  react/jsx-filename-extension: error
+  extensions: .js, .jsx
   semi: error, always
-  quotes: error, double
+  quotes: 
+    error,
+    single,
+    avoidEscape: true
+    allowTemplateLiterals: true
+  prettier/prettier:
+    error
+    singleQuote: true
+    tabWidth: 2
+    trailingComna: all
+
+  parser: babel-eslint
+  parserOptions:
+    ecmaVersion: 2018
+    ecmaFeatures:
+      jsx: true
+    sourceType: module
