feat: Add husky and lint-staged pre-commit hook config to package.json

--- a/package.json
+++ b/package.json
@@ -17,6 +17,17 @@
     "redux-thunk": "^2.3.0",
     "tachyons": "^4.9.1"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,json,css,md}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
