--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react": "^16.3.1",
     "react-dom": "^16.3.3",
     "react-redux": "^5.0.7",
-    "react-scripts": "^2.0.0",
+    "react-scripts": "2.1.1",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
