--- a/package.json
+++ b/package.json
@@ -22,15 +22,19 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
     "enzyme": "^3.5.0",
     "enzyme-adapter-react-16": "^1.3.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.17.0",
     "gh-pages": "^1.2.0",
     "nock": "^10.0.0",
-    "prettier": "1.15.2",
+    "prettier": "^1.19.1",
     "redux-mock-store": "^1.5.3"
   },
   "browserslist": [
